# Uptime-Monitor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  STYLE_GUIDE.md  model.conf  pyproject.toml
src/core/: logger.py  settings.py  templates.py
