[project]
name = "uptime-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.11"
dependencies = [
    "dishka>=1.10.0",
    "granian>=2.7.3",
    "mayim>=1.3.2",
    "msgspec>=0.21.1",
    "taskiq[opentelemetry]>=0.12.2",
    "structlog>=25.5.0",
    "spectree>=2.0.1",
    "msgspec-settings>=0.1.0",
    "tenacity>=9.1.4",
    "cryptography>=46.0.7",
    "bcrypt>=5.0.0",
    "uuid6>=2025.0.1",
    "pyjwt>=2.12.1",
    "more-itertools>=11.0.2",
    "rust-just>=1.49.0",
    "pycasbin>=2.8.0",
    "aiosqlite>=0.22.1",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
    "httpx[cli]>=0.28.1",
    "itsdangerous>=2.2.0",
    "pyyaml>=6.0.3",
    "icontract>=2.7.3",
    "starlette-dishka>=1.0.2",
]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "mypy==1.19.1",
    "pyrefly>=0.51.1",
    "pre-commit==4.5.1",
    "ruff==0.15.1",
    "watchfiles==1.1.1",
    "werkzeug[watchdog]==3.1.5",
    "bandit==1.9.3",             # Linter de seguridad
    "pip-audit==2.10.0",         # Verifica vulnerabilidades en dependencias
    "lizard==1.21.0",            # Analiza la complejidad ciclomática del código
    "Icecream==2.2.0",
]

test = [
    "faker>=40.1.2",          # Generador de datos para tests
    "polyfactory>=3.2.0",     # Generador de datos para tests
    "hypothesis==6.150.2",    # Testing basado en propiedades
    "pytest>=9.0.2",          # Runner de tests
    "pytest-sugar==1.1.1",
    "coverage==7.13.1",
    "pytest-asyncio>=1.3.0",  # Soporte async para tests
    "pytest-cov>=7.0.0",      # Reporte de cobertura
    "testcontainers>=4.14.0", # Bases de datos reales en Docker para tests
    "coverage==7.13.1",
]

docs = ["mkdocstrings[python]>=0.18"]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"

# ==== Coverage ====
[tool.coverage.run]
include = ["app/**"]
omit = ["*/migrations/*", "*/tests/*"]
plugins = []

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = ["*/migrations/*.py", "staticfiles/*"]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  #"COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pyrefly]
python-platform = "linux"
python-version = "3.13"
ignore-missing-imports = ["*"]
search-path = ["."]
project-includes = ["app", "src"]
project-excludes = ["**/.[!/.]*", "**/tests"]
use-ignore-files = true

[tool.pyrefly.errors]
bad-assignment = false
invalid-argument = false
